bin_PROGRAMS = msdl

msdl_SOURCES =	asf.c asmrule.c display.c ftp.c http.c main.c mmsh.c mmst.c msdl.c \
		msdllib.c network.c real.c realchallenge.c rmff.c rtsp.c sdpcommon.c \
		sdpreal.c sdpwms.c wmserver.c \
		asf.h asmrule.h display.h ftp.h http.h mmsh.h mmst.h msdl.h \
		msdllib.h network.h real.h realchallenge.h rmff.h rtsp.h sdpcommon.h \
		sdpreal.h sdpwms.h wmserver.h